# digital-signal-processing-app

./: CMakeLists.txt  README.md  practica  requirements.txt  tasks_for_coursework
books/: link_materials.txt
core/: CMakeLists.txt
core/example/: CMakeLists.txt  main.cpp
core/include/: main_lib.h  predict_data.h  processing_data.h  test.h
core/src/: CMakeLists.txt  example.cpp  predict_data.cpp  processing_data.cpp  test.cpp
coursework/: requirements.txt
coursework/scripts/: work_filter.ipynb  work_new.ipynb
coursework/src/: example.py
coursework/src/app/: control.py  data.py  main.py  plot.py  signal_.py  window.py  window.ui
coursework/src/mvc/: app.py  control.py  filter.py  model.py  mysignal.py  plot.py  searchanomaly.py  view.py  window.py  window.ui
coursework/src/processing/: __init__.py  filter.py  main.py  plot.py
data/: link_materials.txt
old/scripts/: work_filter.ipynb
old/src/app/: control.py  data.py  main.py  plot.py  signal_.py  window.py  window.ui
old/src/mvc/: app.py  control.py  filter.py  model.py  mysignal.py  plot.py  searchanomaly.py  view.py  window.py  window.ui
old/src/processing/: data.py  filter.py  main.py  plot.py
report/: Отчет_по_практике_Акмурзина_М.Э..docx
work/: data.py  filter.py  main.py  plot.py  work.ipynb  work_new.ipynb
